fittings/crates/macros/tests/ui/fail/wrong_arg_count.rs
#[fittings::service]
trait WrongArgCountService {
    async fn hello(&self) -> Result<(), fittings::FittingsError>;
}

fn main() {}
